--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur illo atque, eaque non quaerat id exercitationem unde. Nemo sit maiores dolorum eveniet cupiditate numquam, blanditiis magni fugiat expedita dignissimos amet ad, aliquid perspiciatis impedit illo placeat id vero aspernatur quas. Provident, hic soluta! Exercitationem laboriosam praesentium pariatur beatae vitae sint commodi aut animi fugit nulla minus itaque laudantium, temporibus ex asperiores eum saepe quisquam. Impedit doloremque totam dolores debitis recusandae voluptate itaque corrupti saepe vel dolorum, illum, fugiat consequuntur voluptatem veniam id soluta inventore? Quod, laborum ipsam non optio id earum ipsum, facere architecto neque quo impedit blanditiis eum quae.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam modi dolore molestiae id aperiam excepturi, minus optio facilis, repellat voluptate nam facere atque natus illum quae dolor soluta. Odit minus eius ullam, velit cum dolorum fugit reprehenderit mollitia, nihil illum repellat magni fuga aut repudiandae voluptate tempora officiis necessitatibus nobis quasi eos ipsa hic fugiat. Error, voluptate. Dicta, expedita? Quaerat, laborum. Accusamus, labore! Magnam blanditiis, ipsa earum doloribus est eius molestias. Quaerat culpa repellendus quas nam facere nisi hic consequatur, animi, totam labore perspiciatis dolorum dicta et in enim laudantium possimus quia rerum aut officiis fugiat assumenda. Quisquam, nihil atque?</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos enim perferendis dolores cumque, asperiores voluptate laboriosam libero, dolor fugit fuga maiores saepe incidunt? Voluptates recusandae dicta nobis magnam sint vero, officia omnis harum nostrum repellendus sit eum inventore voluptatem libero, accusamus perspiciatis animi? Rem aut temporibus illo eveniet recusandae! Ea reiciendis laborum amet perferendis animi, pariatur excepturi dicta unde ut blanditiis doloremque itaque, delectus quis similique architecto sed quod temporibus odit explicabo magnam? Cupiditate soluta doloribus dolorum a rerum repudiandae libero, facere explicabo voluptatem hic ut architecto, eveniet nam provident quod praesentium commodi pariatur? Magni sequi illum nisi ipsam aliquam!</p>
+
+            <div class="centrarimg">
+                <img src="imagenes/riotttttttttttttttttt.png" alt="ab">
+            </div>
+
+
+
+
     </main>
 </body>
 </html>
